# doris-thirdparty

./: .asf.yaml  .cirrus.yml  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTORS.md  Changelog.txt  LICENSE-binary  LICENSE.txt  Makefile  Makefile.arm64  Makefile.install  Makefile.rule  Makefile.system  NOTICE-binary  README.md  README.txt  azure-pipelines.yml  bootstrap  buffer.c  bufferevent_async.c  bufferevent_ratelim.c  build.sh  c_check  common.h  common_param.h  common_s.h  cpuid_arm64.c  cpuid_x86.c  datatables.css  datatables.js  datatables.min.css  datatables.min.js  env.sh  evutil.c  http-internal.h  http.c  mkdocs.yml  (+3 more)
.github/workflows/: build-1.2.yml  build-2.0.yml  build-2.1.yml  build-3.0.yml  build-3.1.yml  build.yml  c910v.yml  clucene-ut.yml  dynamic_arch.yml  harmonyos.yml  manual-build.yml  mips64.yml
CMake/: FindGoogleTest.cmake  Options.cmake  Platform.cmake
c++/src/: ColumnReader.cc  ColumnReader.hh  Compression.cc  LzoDecompressor.hh  Options.hh  Reader.cc  Reader.hh  Statistics.cc  StripeStream.cc  StripeStream.hh  TypeImpl.cc  TypeImpl.hh
c++/test/: TestDecompression.cc
cmake/: CLuceneBoost.cmake  FindICU.cmake  FindRoaring.cmake  FindZstd.cmake  TurboPFOR.cmake  arch.cmake  cc.cmake  f_check.cmake  fc.cmake  prebuild.cmake  system.cmake  system_check.cmake
ctest/: CMakeLists.txt  cblas_test.h
debian/: build.sh  control
dev-support/docker/: Dockerfile_aarch64
docs/: build_system.md  faq.md  install.md  runtime_variables.md
driver/level3/: level3_thread.c
driver/others/: dynamic.c  dynamic_arm64.c  memory.c
exports/: gensymbol  gensymbol.pl
faiss/: CMakeLists.txt  IndexIVF.cpp
faiss/impl/: random_access_reader.cpp  random_access_reader.h
faiss/invlists/: PreadInvertedLists.cpp  PreadInvertedLists.h
hadoop-assemblies/: pom.xml
hadoop-build-tools/: pom.xml
hadoop-client-modules/: pom.xml
hadoop-client-modules/hadoop-client/: pom.xml
hadoop-client-modules/hadoop-client-api/: pom.xml
hadoop-client-modules/hadoop-client-check-invariants/: pom.xml
hadoop-client-modules/hadoop-client-check-test-invariants/: pom.xml
hadoop-client-modules/hadoop-client-integration-tests/: pom.xml
hadoop-client-modules/hadoop-client-minicluster/: pom.xml
hadoop-client-modules/hadoop-client-runtime/: pom.xml
hadoop-cloud-storage-project/: pom.xml
hadoop-cloud-storage-project/hadoop-cloud-storage/: pom.xml
hadoop-cloud-storage-project/hadoop-cos/: pom.xml
hadoop-common-project/: pom.xml
hadoop-common-project/hadoop-annotations/: pom.xml
hadoop-dist/: pom.xml
hadoop-hdfs-project/: pom.xml
hadoop-mapreduce-project/: pom.xml
hadoop-maven-plugins/: pom.xml
hadoop-minicluster/: pom.xml
hadoop-project/: pom.xml
hadoop-project-dist/: pom.xml
hadoop-tools/: pom.xml
hadoop-yarn-project/: pom.xml
interface/: CMakeLists.txt  Makefile  gemm.c  gemmt.c  gemv.c  nrm2.c
kernel/: CMakeLists.txt  Makefile.L1  Makefile.L3  setparam-ref.c
rpms/: build.sh  libhdfs3.spec
src/: CMakeLists.txt
src/contribs-lib/: CMakeLists.txt
src/contribs-lib/CLucene/analysis/: LanguageBasedAnalyzer.cpp  LanguageBasedAnalyzer.h
src/contribs-lib/CLucene/analysis/cjk/: CJKAnalyzer.cpp  CJKAnalyzer.h
src/contribs-lib/CLucene/analysis/de/: GermanStemFilter.cpp
src/contribs-lib/CLucene/analysis/ik/: IKTokenizer.cpp  IKTokenizer.h
src/contribs-lib/CLucene/analysis/ik/cfg/: Configuration.h
src/contribs-lib/CLucene/analysis/ik/core/: AnalyzeContext.cpp  AnalyzeContext.h  CJKSegmenter.cpp  CJKSegmenter.h  CN_QuantifierSegmenter.cpp  CN_QuantifierSegmenter.h  CharacterUtil.cpp  CharacterUtil.h  IKArbitrator.cpp  IKArbitrator.h  IKSegmenter.cpp  IKSegmenter.h  ISegmenter.h  LetterSegmenter.cpp  LetterSegmenter.h  Lexeme.cpp  Lexeme.h  LexemePath.cpp  LexemePath.h  QuickSortSet.cpp  QuickSortSet.h
src/contribs-lib/CLucene/analysis/ik/dic/: DictSegment.cpp  DictSegment.h  Dictionary.cpp  Dictionary.h  Hit.h
src/contribs-lib/CLucene/analysis/ik/util/: IKAllocator.h  IKContainer.h  IKMemoryPool.h
src/contribs-lib/CLucene/analysis/jieba/: ChineseTokenizer.cpp  ChineseTokenizer.h  DictTrie.hpp  FullSegment.hpp  HMMModel.hpp  Jieba.hpp  KeywordExtractor.hpp  LocalVector.hpp  Logging.hpp  MPSegment.hpp  MixSegment.hpp  PreFilter.hpp  QuerySegment.hpp  StdExtension.hpp  StringUtil.hpp  Trie.hpp  Unicode.hpp
src/contribs-lib/CLucene/analysis/jieba/dict/: stop_words.utf8
src/contribs-lib/CLucene/highlighter/: QueryScorer.cpp  QueryTermExtractor.cpp  TokenGroup.cpp  TokenSources.cpp
src/contribs-lib/CLucene/snowball/: Snowball.cpp
src/contribs-lib/CLucene/snowball/libstemmer/: libstemmer.c
src/contribs-lib/CLucene/util/: gzipcompressstream.cpp  gzipinputstream.cpp
src/demo/: CMakeLists.txt  IndexFiles.cpp  Main.cpp  Main_Index.cpp  SearchFiles.cpp  Statistics.cpp  TestAnalyzer.cpp  abnormal.cpp  allIndex.cpp  demo.cpp  pointSearch4.cpp  pointSearch8.cpp  search.cpp  strSearch.cpp
src/ext/for/: CMakeLists.txt  bitpack.c  bitpack.h  bitunpack.c  bitutil.c  bitutil.h  eliasfano.c  makefile  sse_neon.h  test_bitd1unpack.cpp  time_.h  transpose.c  trlec.c  trled.c  v8.c  vp4.h  vp4c.c  vp4d.c  vsimple.c
src/ext/for/include_/: eliasfano.h
src/gtest/: CMakeLists.txt
src/gtest/parser/: main.cpp
src/tokenizer/: CMakeLists.txt
src/tokenizer/etc/: wwsearch_mmseg.ini
src/tokenizer/include/: ICorpusReader.h  SegmentPkg.h  Segmenter.h  SegmenterManager.h  Singleton.h  StringTokenizer.h  SynonymsDict.h  ThesaurusDict.h  UnigramCorpusReader.h  UnigramDict.h  UnigramRecord.h  Utf8_16.h  bsd_getopt.h  config.h  csr.h  csr_assert.h  csr_mmap.h  csr_pool.h  csr_typedefs.h  csr_utils.h  darts.h  dictionary.h  freelist.h  iniparser.h  mmseg_wrapper.h  mmthunk.h  os.h  scoped_ptr.h  tolowercase.h
src/tokenizer/src/: SegmentPkg.cpp  SegmenterManager.cpp  StringTokenizer.cpp  SynonymsDict.cpp  ThesaurusDict.cpp  UnigramCorpusReader.cpp  UnigramDict.cpp  Utf8_16.cpp  bsd_getopt.cpp  csr_mmap.cpp  csr_utils.cpp  dictionary.cpp  iniparser.cpp  mmseg_wrapper.cpp  mmthunk.cpp  segmenter.cpp
utest/: test_potrs.c
(+1949 files in other folders)
